This file documents updates and changes in the package mvord

changes in version 1.2.5 (2024-08-26)
- added Authors@R

changes in version 1.2.4 (2024-07-01)
- change handling of data argument to work also with tibbles

changes in version 1.2.3 (2024-04-18)
- fixed bug in transf_thresholds_fixall

changes in version 1.2.2 (2024-02-27)
- changed maintainer

changes in version 1.2.1 (2024-01-10)
- fixed bugs from the change NCOL(NULL) returns 0 rather than 1

changes in version 1.2.0 (2022-11-18)
- added essay_data to mvord datasets
- added a combis argument in mvord.control which allows the specification of the combinations to be used, if user does not want to use all.
- for logit link replaced mnormt::sadmvt with mvtnorm::pmvt. Function sadmvt cannot not handle dimension larger than d=20
- fixed bug for standard error when threshold.coef are e.g., rep(1:3, 3).

changes in version 1.1.1 (2020-03-16)
- fixed bug for value0 with cor_ar1

changes in version 1.1.0 (2020-11-17)
- speed up in PL_fun - minimal changes in the 10+ decimal places for some specific lead to minimal deviations in the optimization results of the general purpose optimizers. In some cases more evaluation steps are needed.
- implementation of PL_fast
- fixed bug in vector constraints for coef

changes in version 1.0.2 (2020-08-31)
- fixed bug in prediction with categorial variables with newdata

changes in version 1.0.1 (2020-05-27)
- changes in checks due to new treatment when combining ordered factors in R 4.0.1.

changes in version 1.0.0 (2020-04-17)
- publication in Journal of Statistical Software

changes in version 0.3.6 (2019-09-22)
- fixed bug in thresholds checks for two binary responses

changes in version 0.3.5 (2019-03-06)
- added suppressWarnings(RNGversion("3.5.0")) in tests

changes in version 0.3.4 (2019-02-20)
- two additional arguments have been added to the error structures: value = numeric(0)